# mylibrary

./: .gitmodules  CHANGELOG.md  README.md  pyproject.toml
backtests/: AmberCheetahPilot.csv  AmberEagleTeacher.csv  AmberGorillaNurse.csv  AmberLionFirefighter.csv  AmberLynxArtist.csv  BlackCobraPhotographer.csv  BlackDolphinArtist.csv  BlackHorseSoldier.csv  BlackOwlPhotographer.csv  BlackTigerArtist.csv  BlackTigerNurse.csv  BlueCheetahDoctor.csv  BlueCheetahEngineer.csv  BlueCobraArtist.csv  BlueGorillaArchitect.csv  BlueHawkArchitect.csv  BlueLeopardPilot.csv  BrownCheetahSoldier.csv  BrownLionDoctor.csv  BrownOwlPhotographer.csv  CrimsonGorillaArtist.csv  CrimsonLeopardScientist.csv  CrimsonWolfPlumber.csv  GoldBearAstronaut.csv  GoldFalconAstronaut.csv  GoldFoxTeacher.csv  GoldJaguarCarpenter.csv  GoldLionTeacher.csv  GreenCheetahPhotographer.csv  GreenCheetahPlumber.csv  GreenElephantTailor.csv  GreyFalconLawyer.csv  GreyFoxAstronaut.csv  GreyJaguarTailor.csv  GreyTigerDoctor.csv  IndigoCheetahFirefighter.csv  IndigoCheetahLawyer.csv  IndigoCobraTailor.csv  IndigoFoxPhotographer.csv  IndigoLeopardLawyer.csv  (+48 more)
blockchain/: backtest.pkl
docs/: conf.py
src/mylibrary/: mylibrary.py
src/myprojectpythonReda/: __init__.py
tests/: test_mylibrary.py
