[tool.poetry]
name = "mylibrary"
version = "0.0.0"
description = "package for the python project 2025 class"
authors = ["Reda El Fassi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
